cabal-version:   2.0
name:            tasty-bench-fit
version:         0.1
license:         BSD3
license-file:    LICENSE
maintainer:      andrew.lelechenko@gmail.com
author:          Bodigrim
tested-with:
    ghc ==9.6.1 ghc ==9.4.4 ghc ==9.2.7 ghc ==9.0.2 ghc ==8.10.7
    ghc ==8.8.4 ghc ==8.6.5 ghc ==8.4.4

synopsis:        Determine time complexity of a given function
description:
    Benchmark a given function for variable input sizes
    and find out its time complexity.

category:        Development
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/Bodigrim/tasty-bench-fit

flag debug
    description: Emit ongoing diagnostic information.
    default:     False
    manual:      True

library
    exposed-modules:
        Test.Tasty.Bench.Fit
        Test.Tasty.Bench.Fit.Complexity
        Test.Tasty.Bench.Fit.Samples

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.11 && <5,
        deepseq >=1.4 && <1.5,
        tasty >=1.4 && <1.5,
        tasty-bench >=0.3 && <0.4,
        regression-simple >=0.2 && <0.3

    if flag(debug)
        cpp-options: -DDEBUG

        if impl(ghc >=9.2)
            build-depends:
                chart-svg >=0.4 && <0.5,
                optics-core >=0.4 && <0.5

test-suite tasty-bench-fit-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        base,
        containers <0.7,
        tasty,
        tasty-bench,
        tasty-bench-fit,
        tasty-quickcheck <0.11,
        tasty-expected-failure <0.13
