cabal-version:   2.0
name:            tasty-bench-fit
version:         0.1.1
license:         MIT
license-file:    LICENSE
maintainer:      andrew.lelechenko@gmail.com
author:          Bodigrim
tested-with:
    ghc ==9.10.1 ghc ==9.8.2 ghc ==9.6.5 ghc ==9.4.8 ghc ==9.2.8
    ghc ==9.0.2 ghc ==8.10.7 ghc ==8.8.4 ghc ==8.6.5 ghc ==8.4.4

homepage:        https://github.com/Bodigrim/tasty-bench-fit
synopsis:        Determine time complexity of a given function
description:
    Benchmark a given function for variable input sizes
    and find out its time complexity.

category:        Development
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/Bodigrim/tasty-bench-fit

flag debug
    description: Emit ongoing diagnostic information.
    default:     False
    manual:      True

library
    exposed-modules:
        Test.Tasty.Bench.Crossover
        Test.Tasty.Bench.Fit

    hs-source-dirs:   src
    other-modules:
        Test.Tasty.Bench.Fit.Complexity
        Test.Tasty.Bench.Utils

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.11 && <5,
        containers >=0.5.11 && <0.8,
        deepseq >=1.4 && <1.6,
        infinite-list >=0.1 && <0.2,
        tasty >=1.4 && <1.6,
        tasty-bench >=0.4 && <0.5,
        regression-simple >=0.2.1 && <0.3

    if flag(debug)
        cpp-options: -DDEBUG

test-suite tasty-bench-fit-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        base,
        containers,
        tasty,
        tasty-bench,
        tasty-bench-fit,
        tasty-quickcheck <0.12,
        tasty-expected-failure <0.13
